<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />


    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_margin="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/txt_message"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/scan_button" />

    <Button
        android:id="@+id/capture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/capture_button" />

    <Button
        android:id="@+id/listen_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/listen_button" />


</LinearLayout>
