<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SaveActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pockettextrecognizer.Activities.SaveActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="ID"
            android:id="@+id/idTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Name"
            android:id="@+id/nameTextView"
            android:layout_below="@+id/edit_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Text"
            android:id="@+id/scannedTextView"
            android:layout_below="@+id/edit_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/idTextView"
            android:layout_toEndOf="@+id/idTextView"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_below="@+id/edit_id"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/nameTextView"
            android:layout_toEndOf="@+id/nameTextView"/>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_below="@+id/edit_name"
            android:layout_height="300dp"
            android:layout_toRightOf="@+id/scannedTextView"
            android:layout_toEndOf="@+id/scannedTextView" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:layout_below="@+id/edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/save_button"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:layout_alignLeft="@+id/save_button"
            android:layout_below="@+id/save_button"
            android:layout_marginTop="17dp"
            android:text="@string/update_button" />

        <Button
            android:id="@+id/view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:layout_alignLeft="@+id/update_button"
            android:layout_below="@+id/update_button"
            android:layout_marginTop="17dp"
            android:text="@string/view_button"/>


        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:layout_alignLeft="@+id/view_button"
            android:layout_below="@+id/view_button"
            android:layout_marginTop="17dp"
            android:text="@string/delete_button"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:layout_alignLeft="@+id/delete_button"
            android:layout_below="@+id/delete_button"
            android:layout_marginTop="17dp"
            android:text="@string/reset_button" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>